--- a/src/package.json
+++ b/src/package.json
@@ -38,8 +38,8 @@
     "netcdfjs": "^2.0.2",
     "peer": "^0.x",
     "peerjs": "^1.3.x",
-    "socket.io": "4.6.x",
-    "socket.io-client": "4.x"
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.7.5"
   },
   "author": "UIHI Lab",
   "license": "MIT",
